--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,14 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
+        "bensampo/laravel-enum": "^3.3",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.12",
         "laravel/tinker": "^2.5",
         "php-vcr/phpunit-testlistener-vcr": "^3.1",
+        "spatie/data-transfer-object": "^2.8",
         "spatie/laravel-fractal": "^5.8"
     },
     "require-dev": {
@@ -23,7 +25,8 @@
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.2",
         "nunomaduro/collision": "^5.0",
-        "phpunit/phpunit": "^9.3.3"
+        "phpunit/phpunit": "^9.3.3",
+        "vimeo/psalm": "^4.6"
     },
     "config": {
         "optimize-autoloader": true,
@@ -37,7 +40,11 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app/",
+            "App\\": "app/Core",
+            "Domains\\": "app/Domains",
+            "Parents\\": "app/Parents",
+            "Support\\": "app/Support",
+            "Units\\": "app/Units",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
         }
