--- a/.env.example
+++ b/.env.example
@@ -47,3 +47,7 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+EXTERNAL_API_URL="https://randomuser.me/api"
+EXTERNAL_API_NATIONALITY="AU"
+EXTERNAL_API_MAX_ENTRIES=100
