--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/framework": "^8.12",
         "laravel/tinker": "^2.5",
         "php-vcr/phpunit-testlistener-vcr": "^3.1",
+        "propaganistas/laravel-phone": "^4.3",
         "spatie/data-transfer-object": "^2.8",
         "spatie/laravel-fractal": "^5.8"
     },
